<resources>
    <string name="app_name">AndroidToDoList</string>
    <string name="welcome_message">Welcome To Cory\'s ToDo List</string>
    <string name="add_symbol">+</string>
    <string name="add_todo">Add a New Todo</string>
    <string name="enter_todo_item_name">Enter todo item name</string>
    <string name="urgent">Urgent?</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="item_name">item name</string>
    <string name="item_urgency">item urgency</string>
    <string name="edit_item_message">Edit a Todo Item</string>
    <string name="today_button_text">Today\'s Items</string>
    <string name="past_button_text">Past Items</string>
    <string name="item_date">item date</string>
    <string name="all_button_text">All Items</string>
</resources>