<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity">

    <TextView
        android:id="@+id/add_todo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_todo"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/item_name_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/item_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_todo_item_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/urgent_layout_block"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_todo_title" />

    <LinearLayout
        android:id="@+id/urgent_layout_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_name_edit_text">

        <TextView
            android:id="@+id/urgent_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urgent" />

        <CheckBox
            android:id="@+id/urgent_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/urgent_layout_block">

        <Button
            android:id="@+id/save_new_todo_btn"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:background="@drawable/rounded_button"
            android:padding="10dp"
            android:text="@string/save"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:onClick="savePressed"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/cancel_new_todo_btn"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:background="@drawable/rounded_button"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:onClick="cancelPressed"
            android:layout_margin="5dp"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>