<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:longClickable="true">

    <TextView
        android:id="@+id/item_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/item_urgency"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="0.65"
        app:layout_constraintVertical_weight="0.75"
        android:gravity="center"
        android:text="@string/item_name"
        android:textSize="25sp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/item_urgency"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/item_date"
        app:layout_constraintLeft_toRightOf="@id/item_name"
        app:layout_constraintHorizontal_weight="0.35"
        android:gravity="center"
        android:text="@string/item_urgency"
        android:textSize="20sp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/item_date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/item_urgency"
        app:layout_constraintHorizontal_weight="0.35"
        android:gravity="center"
        android:text="@string/item_date"
        android:textSize="20sp"
        android:textColor="#000000" />

</androidx.constraintlayout.widget.ConstraintLayout>